crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@operator_edges.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/operator_edges.spl
---
Ident "a"
DotDot ".."
Dot "."
Ident "b"
Whitespace "\n"
Ident "a"
DotDotEq "..="
Dot "."
Ident "b"
Whitespace "\n"
Ident "a"
Plus "+"
Slash "/"
Ident "b"
Whitespace "\n"
Ident "a"
Le "<="
Eq "="
Ident "b"
Whitespace "\n"
Ident "a"
Ge ">="
Gt ">"
Ident "b"
Whitespace "\n"
Ident "a"
ColonColon "::"
Colon ":"
Ident "b"
Whitespace "\n"
Ident "x"
Star "*"
Slash "/"
Ident "y"
Whitespace "\n"
Quantity "4k7"
PlusMinus "±"
Quantity "1%"
Whitespace "\n"
Ident "x"
PlusMinus "±"
Ident "y"
Whitespace "\n"
Quantity "4.5V"
Arrow "->"
Quantity "3.0V"
Whitespace "\n"
Ident "a"
Whitespace " "
Minus "-"
Whitespace " "
Gt ">"
Whitespace " "
Ident "b"
Whitespace "\n"
Ident "x"
Minus "-"
Arrow "->"
Ident "y"
Whitespace "\n"
Ident "a"
Arrow "->"
Minus "-"
Ident "b"
Whitespace "\n"
Eof ""
