crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@punctuation.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/punctuation.spl
---
LBrace "{"
Whitespace " "
RBrace "}"
Whitespace " "
LParen "("
Whitespace " "
RParen ")"
Whitespace " "
LBracket "["
Whitespace " "
RBracket "]"
Whitespace " "
Lt "<"
Whitespace " "
Gt ">"
Whitespace " "
Le "<="
Whitespace " "
Ge ">="
Whitespace " "
Comma ","
Whitespace " "
Semi ";"
Whitespace " "
Colon ":"
Whitespace " "
ColonColon "::"
Whitespace " "
Dot "."
Whitespace " "
DotDot ".."
Whitespace " "
DotDotEq "..="
Whitespace " "
Eq "="
Whitespace " "
Plus "+"
Whitespace " "
Minus "-"
Whitespace " "
Arrow "->"
Whitespace " "
Star "*"
Whitespace " "
Slash "/"
Whitespace " "
PlusMinus "±"
Whitespace " "
PlusMinus "+/-"
Whitespace " "
Pound "#"
Whitespace " "
Question "?"
Whitespace "\n"
Ident "a"
PlusMinus "+/-"
Ident "b"
Whitespace "\n"
Ident "Foo"
Lt "<"
Ident "Tol"
Lt "<"
Ident "Ohm"
Gt ">"
Gt ">"
Whitespace "\n"
Ident "x"
Le "<="
Ident "y"
Whitespace "\n"
Ident "h"
Dot "."
Ident "at"
LParen "("
Quantity "1kHz"
RParen ")"
Dot "."
Ident "mag"
LParen "("
RParen ")"
Whitespace "\n"
Quantity "5mA"
Whitespace " "
Arrow "->"
Whitespace " "
Quantity "30mA"
Whitespace "\n"
Ident "std"
ColonColon "::"
Ident "prelude"
Whitespace "\n"
Pound "#"
LBracket "["
Ident "confidence"
LParen "("
Ident "sigma"
LParen "("
Quantity "3"
RParen ")"
RParen ")"
RBracket "]"
Whitespace "\n"
Eof ""
