crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@quantities.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/quantities.spl
---
LineComment "// grammar.md §5.2, one literal per line."
Whitespace "\n"
Quantity "47k"
Whitespace "\n"
Quantity "4k7"
Whitespace "\n"
Quantity "1kHz"
Whitespace "\n"
Quantity "100nF"
Whitespace "\n"
Quantity "1F"
Whitespace "\n"
Quantity "1f"
Whitespace "\n"
Quantity "1m"
Whitespace "\n"
Quantity "1M"
Whitespace "\n"
Quantity "1K"
Whitespace "\n"
Quantity "5%"
Whitespace "\n"
LineComment "// Spellings accepted both ways (grammar.md §8)."
Whitespace "\n"
Quantity "1uF"
Whitespace "\n"
Quantity "1µF"
Whitespace "\n"
Quantity "1μF"
Whitespace "\n"
Quantity "10kΩ"
Whitespace "\n"
Quantity "10kΩ"
Whitespace "\n"
Quantity "10kohm"
Whitespace "\n"
Quantity "1_000"
Whitespace "\n"
Quantity "1000"
Whitespace "\n"
LineComment "// Decimals, exponents and units."
Whitespace "\n"
Quantity "4.7k"
Whitespace "\n"
Quantity "1.5e-3V"
Whitespace "\n"
Quantity "1e3"
Whitespace "\n"
Quantity "2.2mH"
Whitespace "\n"
Quantity "10°C"
Whitespace "\n"
Minus "-"
Quantity "3dB"
Whitespace "\n"
Quantity "4k7Ω"
Whitespace "\n"
Eof ""
