crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@ranges.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/ranges.spl
---
Quantity "100"
DotDotEq "..="
Quantity "300"
Whitespace "\n"
Quantity "0"
DotDot ".."
Ident "N"
Whitespace "\n"
Quantity "0.5"
DotDotEq "..="
Quantity "1"
Whitespace "\n"
Minus "-"
Quantity "10°C"
DotDotEq "..="
Quantity "60°C"
Whitespace "\n"
Quantity "4.5V"
DotDotEq "..="
Quantity "6.5V"
Whitespace "\n"
Ident "v"
Whitespace " "
Minus "-"
Whitespace " "
Quantity "0.5V"
DotDotEq "..="
Ident "v"
Whitespace " "
Plus "+"
Whitespace " "
Quantity "0.5V"
Whitespace "\n"
Eof ""
