crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@strings.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/strings.spl
---
LineComment "// Strings, on one line, with `\\\"` and `\\\\` as their only escapes (lexer.md §5)."
Whitespace "\n"
Str "\"reason\""
Whitespace "\n"
Str "\"\""
Whitespace "\n"
Str "\"a \\\"quoted\\\" word\""
Whitespace "\n"
Str "\"a back\\\\slash\""
Whitespace "\n"
Str "\"ends in a backslash\\\\\""
Whitespace "\n"
Str "\"Ω µ °C\""
Whitespace "\n"
Str "\"a\""
Str "\"b\""
Whitespace "\n"
LineComment "// A string is one token: nothing inside it is a comment, a number or a look-alike."
Whitespace "\n"
Str "\"// not a comment /* nor this\""
Whitespace "\n"
Str "\"10 kΩ, .5, 1., +-, −, →\""
Whitespace "\n"
Eof ""
